# se577-webservices-demo

./: .gitignore  readme.md
fastify-node/: .env  server.ts
go/: Dockerfile  go.mod  go.sum  makefile
go/src/: bcservice.go
grpc/better-combined-server/: go.mod  go.sum  main.go
grpc/better-combined-server/BCServer/: BCServer.go
grpc/better-combined-server/certs/: ca.srl  certificate.conf  server.key
grpc/better-combined-server/proto/: bc.proto
grpc/client/: main.go
grpc/client/BCGrpc/: bc_grpc.pb.go
grpc/client/proto/: bc.proto
grpc/combined-server/: .gitignore  go.mod  go.sum  main.go
grpc/combined-server/BCGrpc/: bc.pb.go
grpc/combined-server/BCServer/: BCServer.go  BCServerImpl.go  BCWebServer.go
grpc/combined-server/certs/: ca.cert  ca.key  certgen.sh  server.crt  server.csr
grpc/combined-server/proto/: protogen.sh
grpc/server/: .gitignore  go.mod  main.go  readme.md
grpc/server/BCGrpc/: bc.pb.go  bc_grpc.pb.go
grpc/server/BCServer/: BCServer.go
kotlin/: build.gradle.kts  gradle.properties  settings.gradle.kts
kotlin/src/main/kotlin/com/ArchitectingSoftware/: Application.kt  BCSolver.kt  Messages.kt
node/: Dockerfile  buildcontainer.sh  package-lock.json  package.json  runcontainer.sh  test.sh  tsconfig.json
node/src/: app.ts
rust/: Cargo.toml  Dockerfile  makefile
rust/src/: main.rs
serverless/bc-go-lambda/: Makefile  README.md  samconfig.toml  template.yaml
serverless/bc-go-lambda/.aws-sam/: build.toml
serverless/bc-go-lambda/bc-go/: go.mod  go.sum  main.go
(+5 files in other folders)
