[package]
name = "bc_rust_service"
version = "0.1.0"
authors = ["Brian Mitchell <dr.brian.mitchell@gmail.com>"]
edition = "2021"

[dependencies]
    actix-web = "4.0.1"
    actix-cors = "0.6.1"
    serde = { version = "1.0", features = ["derive"] }
    serde_json = "1.0"
    sha2 = "0.10.2"
    hex-literal = "0.4.1"
    hex = "0.4.2"
    numtoa = "0.2.3"
    faster-hex = "0.6.1"

